# prisma-gui

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  MIGRATION.md  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.claude/agents/: android-engineer.md  frontend-engineer.md  gui-orchestrator.md  ios-engineer.md  mobile-qa.md  perf-engineer.md  platform-engineer.md  version-sync.md
.github/workflows/: ci.yml  release.yml
mobile/: README.md
mobile/android/: AndroidManifest.additions.xml  PrismaVpnService.kt
mobile/ios/: PacketTunnelProvider.swift  PrismaTunnel.entitlements
scripts/: android-vpn-diagnose.sh  android-vpn-test.sh
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns  tray-off.rgba
src-tauri/plugins/vpn/: Cargo.toml
src-tauri/plugins/vpn/android/: build.gradle.kts
src-tauri/plugins/vpn/android/src/main/: AndroidManifest.xml
src-tauri/plugins/vpn/android/src/main/java/app/prisma/vpn/: PrismaVpnService.kt  VpnPlugin.kt
src-tauri/plugins/vpn/android/src/main/java/com/prisma/client/: PrismaVpnService.kt
src-tauri/plugins/vpn/ios/Sources/: VpnPlugin.swift
src-tauri/plugins/vpn/src/: lib.rs  mobile.rs
src-tauri/src/: commands.rs  lib.rs  main.rs  mobile.rs  state.rs  tray.rs
src/components/: BottomNav.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  MobilePage.tsx  NotificationHistory.tsx  (+10 more)
(+82 files in other folders)
